2022-01-29 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c,
      sdcc/src/mos6502/ralloc.c,
      sdcc/src/mos6502/ralloc2.cc:
      Fix a overflow bug in dry run cost calculation.

2022-01-28 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Add new peephole rules.

2022-01-28 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve register transfer operations.

2022-01-26 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improved genLeftShift and genRightShift.

2022-01-25 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c,
      sdcc/src/mos6502/ralloc.c,
      sdcc/src/mos6502/ralloc.h,
      sdcc/src/mos6502/ralloc2.c:
      Make m6502_dirtyReg take only one parameter.

2022-01-25 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Refactor verbose assembler debug code.

2022-01-25 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/z80-arguments.svg:
	  Fix documentation on z80 calling convention for 32-bit argument followed by 16-bit argument.

2022-01-23 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Add swapAX function.

2022-01-23 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Add cycle based cost calculation.

2022-01-23 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Implement a few missing codegen paths.

2022-01-23 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/mcs51/P89LPC901.h,
	  device/include/mcs51/P89LPC922.h,
	  device/include/mcs51/P89LPC925.h,
	  device/include/mcs51/P89LPC932.h,
	  device/include/mcs51/P89c51RD2.h,
	  device/include/mcs51/cc1110.h,
	  device/include/mcs51/cc2430.h,
	  device/include/mcs51/cc2530.h,
	  device/include/mcs51/uPSD33xx.h:
	  Fix bug #3300, namely encoding issues in various headers.

2022-01-23 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCmain.c:
	  Implement CLI option --include.
